--- a/backend/package.json
+++ b/backend/package.json
@@ -5,5 +5,8 @@
   "main": "index.js",
   "repository": "https://github.com/ksvan/smarthome-aggregator.git",
   "author": "Kristian Svantorp",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
