--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,10 @@
   "author": "Kristian Svantorp",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "helmet": "^3.18.0"
+  },
+  "devDependencies": {
+    "eslint-config-standard": "^12.0.0"
   }
 }
